Adding Question Scene